src/snapshots/ruff__linter__tests__D411_sections.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    BlankLineBeforeSection: Yields
  location:
    row: 67
    column: 5
  end_location:
    row: 78
    column: 8
  fix: ~
- kind:
    BlankLineBeforeSection: Returns
  location:
    row: 122
    column: 5
  end_location:
    row: 129
    column: 8
  fix: ~
- kind:
    BlankLineBeforeSection: Raises
  location:
    row: 207
    column: 5
  end_location:
    row: 221
    column: 8
  fix: ~

